--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-faiss_gpu==1.7.2
-fastapi==0.115.0
-numpy==2.1.1
-pandas==2.2.3
-pydantic==2.9.2
-Requests==2.32.3
-scikit_learn==1.5.2
-uvicorn==0.30.6
+pandas~=2.2.3
+numpy~=1.26.4
+faiss-cpu~=1.8.0.post1
+uvicorn~=0.31.0
+fastapi~=0.115.0
+pydantic~=2.9.2
